Add home dashboard with live statistics and today's appointments